load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

# Generate test files (100K files with mixed message formats)
# Includes defineMessage, defineMessages, formatMessage, and FormattedMessage patterns
js_run_binary(
    name = "generate",
    srcs = ["generate-test-files.mjs"],
    chdir = package_name(),
    env = {"NUM_FILES": "100000"},
    out_dirs = ["test-files"],
    tags = ["manual"],
    tool = "//:node_modules/node",
)

# Benchmark binary
js_binary(
    name = "benchmark",
    data = [
        "benchmark-tinybench.mjs",
        ":generate",  # Test files as data dependency
        "//:node_modules/@bazel/runfiles",
        "//:node_modules/tinybench",
        "//crates/formatjs_cli",
        "//packages/cli:bin",
    ],
    entry_point = "benchmark-tinybench.mjs",
    tags = ["manual"],
)
