load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

js_binary(
    name = "generate_tool",
    entry_point = "generate-test-files.mjs",
)

# Generate test files with mixed message formats
# Includes defineMessage, defineMessages, formatMessage, and FormattedMessage patterns
js_run_binary(
    name = "generate",
    chdir = package_name(),
    env = {"NUM_FILES": "1000"},
    out_dirs = ["test-files"],
    tags = ["manual"],
    tool = ":generate_tool",
)

# Benchmark binary
js_binary(
    name = "benchmark",
    data = [
        "benchmark-tinybench.mjs",
        ":generate",  # Test files as data dependency
        "//:node_modules/@bazel/runfiles",
        "//:node_modules/tinybench",
        "//crates/formatjs_cli",
        "//packages/cli:bin",
    ],
    entry_point = "benchmark-tinybench.mjs",
    tags = ["manual"],
)
