filegroup(
    name = "extract_srcs",
    srcs = glob(
        [
            "packages/**/*.js",
            "packages/**/*.jsx",
            "packages/**/*.ts",
            "packages/**/*.tsx",
            "src/**/*.js",
            "src/**/*.jsx",
            "src/**/*.ts",
            "src/**/*.tsx",
            "x-pack/**/*.js",
            "x-pack/**/*.jsx",
            "x-pack/**/*.ts",
            "x-pack/**/*.tsx",
        ],
        allow_empty = True,
        exclude = [
            "**/__snapshots__/**",
            "**/coverage/**",
            "**/dist/**",
            "**/node_modules/**",
            "**/target/**",
        ],
    ),
    visibility = ["//visibility:public"],
)
