filegroup(
    name = "extract_srcs",
    srcs = glob(
        [
            "src/**/*.js",
            "src/**/*.jsx",
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
        allow_empty = True,
        exclude = [
            "**/__snapshots__/**",
            "**/coverage/**",
            "**/dist/**",
            "**/node_modules/**",
        ],
    ),
    visibility = ["//visibility:public"],
)
