load("@rules_java//java:defs.bzl", "java_binary", "java_import")

java_import(
    name = "icu4j",
    jars = ["@icu4j_jar//file"],
)

java_binary(
    name = "icu_conformance_test",
    srcs = ["ICUConformanceTest.java"],
    data = ["//packages/intl-localematcher:tests/locale-match-fixtures.json"],
    env = {
        "LOCALE_MATCH_FIXTURES": "$(rootpath //packages/intl-localematcher:tests/locale-match-fixtures.json)",
    },
    main_class = "ICUConformanceTest",
    deps = [":icu4j"],
)
