[package]
name = "formatjs_cli"
version = "1.1.13"
edition = "2024"
authors = ["FormatJS Team", "Long Ho <holevietlong@gmail.com>"]
description = "Command-line interface for FormatJS - A Rust-based CLI for internationalization"
license = "MIT"
repository = "https://github.com/formatjs/formatjs"
homepage = "https://formatjs.io/"
documentation = "https://docs.rs/formatjs_cli"
keywords = ["icu", "i18n", "internationalization", "cli", "intl"]
categories = ["internationalization", "command-line-utilities", "localization"]
readme = "README.md"
rust-version = "1.93"

[[bin]]
name = "formatjs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
fast-glob = "1.0"
walkdir = "2"
formatjs_icu_messageformat_parser = { path = "../icu_messageformat_parser", version = "0.2.4" }
formatjs_icu_skeleton_parser = { path = "../icu_skeleton_parser", version = "0.1.1" }
once_cell = "1.21"
oxc = { version = "0.133", features = ["ast_visit"] }
oxc_allocator = "0.133"
oxc_ast = "0.133"
oxc_data_structures = { version = "0.133", features = ["rope"] }
oxc_parser = "0.133"
oxc_span = "0.133"
sha2 = "0.11"
sha1 = "0.11"
md-5 = "0.11"
base64 = "0.22"
hex = "0.4"
rayon = "1.12"
regex = "1.12"

[dev-dependencies]
tempfile = "3.0"
