load("@rules_rs//rs:rust_shared_library.bzl", "rust_shared_library")
load(
    ":release_node.bzl",
    "release_node_darwin_arm64",
    "release_node_linux_arm64",
    "release_node_linux_x64",
)

exports_files(
    [
        "Cargo.toml",
        "src/lib.rs",
    ],
    visibility = ["//visibility:public"],
)

rust_shared_library(
    name = "formatjs_cli_napi",
    srcs = [
        "src/lib.rs",
    ],
    crate_name = "formatjs_cli_napi",
    edition = "2024",
    proc_macro_deps = [
        "@crates//:napi-derive",
    ],
    rustc_flags = select({
        "@platforms//os:macos": [
            "-Clink-arg=-Wl,-undefined,dynamic_lookup",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/formatjs_cli:formatjs_cli_lib",
        "@crates//:napi",
    ],
)

release_node_darwin_arm64(
    name = "release_node_darwin_arm64",
    srcs = [":formatjs_cli_napi"],
    outs = ["formatjs_cli_napi_darwin_arm64.node"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

release_node_linux_x64(
    name = "release_node_linux_x64",
    srcs = [":formatjs_cli_napi"],
    outs = ["formatjs_cli_napi_linux_x64.node"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

release_node_linux_arm64(
    name = "release_node_linux_arm64",
    srcs = [":formatjs_cli_napi"],
    outs = ["formatjs_cli_napi_linux_arm64.node"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "release_nodes",
    srcs = [
        ":release_node_darwin_arm64",
        ":release_node_linux_arm64",
        ":release_node_linux_x64",
    ],
    visibility = ["//visibility:public"],
)
