[package]
name = "formatjs_icu_skeleton_parser"
version = "0.1.1"
edition = "2024"
authors = ["FormatJS Team", "Long Ho <holevietlong@gmail.com>"]
description = "Parser for ICU number and date/time skeleton strings"
license = "MIT"
repository = "https://github.com/formatjs/formatjs"
homepage = "https://formatjs.io/"
documentation = "https://docs.rs/formatjs_icu_skeleton_parser"
keywords = ["icu", "i18n", "internationalization", "formatting", "skeleton"]
categories = ["internationalization", "parser-implementations", "localization"]
readme = "../../packages/icu-skeleton-parser/README.md"
rust-version = "1.90"

[lib]
path = "lib.rs"

[dependencies]
once_cell = "1.21"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
