load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

# Optimization flags for the parser binary. Since this is a long-lived subprocess
# used by gazelle, we want maximum parse throughput.
# Note: LTO (-Clto=thin) is incompatible with the Rust toolchain's -Cembed-bitcode=no,
# so we rely on codegen-units=1 for cross-function optimization instead.
_OPT_RUSTC_FLAGS = [
    "-Cpanic=abort",  # No unwind tables — smaller binary, deterministic failures
    "-Ccodegen-units=1",  # Single codegen unit for better inlining/optimization
]

rust_library(
    name = "ts_import_extractor",
    srcs = [
        "src/extract_imports.rs",
        "src/lib.rs",
    ],
    edition = "2024",
    rustc_flags = _OPT_RUSTC_FLAGS,
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:oxc",
        "@crates//:oxc_allocator",
        "@crates//:oxc_ast",
        "@crates//:oxc_parser",
        "@crates//:oxc_span",
    ],
)

rust_binary(
    name = "bin",
    srcs = ["src/main.rs"],
    edition = "2024",
    rustc_flags = _OPT_RUSTC_FLAGS,
    visibility = ["//visibility:public"],
    deps = [
        ":ts_import_extractor",
        "//crates/ts_import_extractor/proto:ts_import_extractor_rust_proto",
        "@crates//:rayon",
        "@rrprd//:prost",
    ],
)

rust_test(
    name = "unit_test",
    crate = ":ts_import_extractor",
    deps = [
        "@crates//:pretty_assertions",
    ],
)
