[package]
name = "ts_import_extractor"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "ts_import_extractor"
path = "src/main.rs"

[dependencies]
oxc = { version = "0.120", features = ["ast_visit"] }
oxc_allocator = "0.120"
oxc_ast = "0.120"
oxc_parser = "0.120"
oxc_span = "0.120"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
