[package]
name = "formatjs_cli"
version = "0.1.0"
edition = "2021"
authors = ["FormatJS Team", "Long Ho <holevietlong@gmail.com>"]
description = "Command-line interface for FormatJS - A Rust-based CLI for internationalization"
license = "MIT"
repository = "https://github.com/formatjs/formatjs"
homepage = "https://formatjs.io/"
documentation = "https://docs.rs/formatjs_cli"
keywords = ["icu", "i18n", "internationalization", "cli", "intl"]
categories = ["internationalization", "command-line-utilities", "localization"]
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "formatjs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
formatjs_icu_messageformat_parser = { path = "../icu_messageformat_parser", version = "0.1.0" }
formatjs_icu_skeleton_parser = { path = "../icu_skeleton_parser", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.0"
