[package]
name = "formatjs_cli"
version = "0.1.5"
edition = "2024"
authors = ["FormatJS Team", "Long Ho <holevietlong@gmail.com>"]
description = "Command-line interface for FormatJS - A Rust-based CLI for internationalization"
license = "MIT"
repository = "https://github.com/formatjs/formatjs"
homepage = "https://formatjs.io/"
documentation = "https://docs.rs/formatjs_cli"
keywords = ["icu", "i18n", "internationalization", "cli", "intl"]
categories = ["internationalization", "command-line-utilities", "localization"]
readme = "README.md"
rust-version = "1.90"

[[bin]]
name = "formatjs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
glob = "0.3"
formatjs_icu_messageformat_parser = { path = "../icu_messageformat_parser", version = "0.2.1" }
formatjs_icu_skeleton_parser = { path = "../icu_skeleton_parser", version = "0.1.1" }
oxc = { version = "0.107", features = ["ast_visit"] }
oxc_allocator = "0.107"
oxc_ast = "0.107"
oxc_parser = "0.107"
oxc_span = "0.107"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
