[package]
description = "ICU MessageFormat Parser"
edition     = "2021"
license     = "MIT"
name        = "icu-messageformat-parser"
repository  = "https://github.com/formatjs/formatjs"
version     = "0.0.2"

[features]
utf16 = ["widestring"]

[dependencies]
langtag    = "0.3.2"
once_cell  = "1.14.0"
regex      = "1.6.0"
serde      = { version = "1.0.144", features = ["derive"] }
serde_repr = "0.1"
widestring = { version = "1.0.2", optional = true }

[dev-dependencies]
serde_json      = "1.0.83"
similar-asserts = "1.4.2"
testing         = "0.40.0"
