[package]
name = "formatjs_icu_messageformat_parser"
version = "0.2.2"
edition = "2024"
authors = ["FormatJS Team", "Long Ho <holevietlong@gmail.com>"]
description = "ICU MessageFormat parser implementation in Rust"
license = "MIT"
repository = "https://github.com/formatjs/formatjs"
homepage = "https://formatjs.io/"
documentation = "https://docs.rs/formatjs_icu_messageformat_parser"
keywords = ["icu", "i18n", "internationalization", "messageformat", "intl"]
categories = ["internationalization", "parser-implementations", "localization"]
readme = "../../packages/icu-messageformat-parser/README.md"
rust-version = "1.90"

[dependencies]
icu = "2.1"
formatjs_icu_skeleton_parser = { path = "../icu_skeleton_parser", version = "0.1.1" }
once_cell = "1.21"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.105"
serde-wasm-bindgen = "0.6"
indexmap = { version = "2.12", features = ["serde"] }

[dev-dependencies]
criterion = "0.8"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "parser_bench"
harness = false
