[package]
edition = "2021"
name    = "swc-formatjs-custom-transform"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
anyhow = "1.0.65"
backtrace = "0.3.67"
napi = { version = "2.9.1", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2.9.1", default-features = false, features = [
  "type-def",
] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["unbounded_depth"] }

swc-formatjs-visitor = { path = "../swc-formatjs-visitor", features = [
  "custom_transform",
] }
swc_core = { version = "0.106.0", features = [
  "common_concurrent",
  "ecma_transforms",
  "ecma_ast",
  "allocator_node",
  "ecma_visit",
  "base_node",
] }
