[package]
authors     = ["OJ Kwon <kwon.ohjoong@gmail.com>"]
description = "formatjs plugin for SWC"
edition     = "2021"
license     = "MIT"
name        = "swc-plugin-formatjs"
repository  = "https://github.com/formatjs/formatjs"
version     = "0.0.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
swc-formatjs-visitor = { path = "../swc-formatjs-visitor", version = "0.0.2", features = [
  "plugin",
] }
swc_core = { version = "0.75.42", features = ["ecma_plugin_transform", "ecma_ast_serde"] }
